--- a/Principia/Base.lproj/Main.storyboard
+++ b/Principia/Base.lproj/Main.storyboard
@@ -202,6 +202,13 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Progress: 0%" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="49a-Bm-Jzm">
+                                <rect key="frame" x="6" y="65" width="88" height="17"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -212,7 +219,9 @@
                             <constraint firstItem="99O-ka-blD" firstAttribute="top" secondItem="bks-Fo-Osy" secondAttribute="bottom" constant="10" id="69a-lQ-Tar"/>
                             <constraint firstAttribute="centerY" secondItem="tbY-LX-K8w" secondAttribute="centerY" id="Byz-Oo-vvo"/>
                             <constraint firstAttribute="trailing" secondItem="2ux-1M-Bze" secondAttribute="trailing" id="JxT-oM-dFk"/>
+                            <constraint firstItem="49a-Bm-Jzm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="6" id="Kjb-sy-VkH"/>
                             <constraint firstAttribute="trailing" secondItem="99O-ka-blD" secondAttribute="trailing" constant="20" id="MO5-hx-Q9r"/>
+                            <constraint firstItem="49a-Bm-Jzm" firstAttribute="top" secondItem="Cqv-aF-aQU" secondAttribute="top" id="OLA-3h-LXM"/>
                             <constraint firstItem="2ux-1M-Bze" firstAttribute="top" secondItem="V5X-Pj-3WK" secondAttribute="bottom" id="S3t-Hj-uC3"/>
                             <constraint firstItem="99O-ka-blD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="XdF-SP-ybo"/>
                             <constraint firstAttribute="centerX" secondItem="99O-ka-blD" secondAttribute="centerX" id="ZUD-3a-qdd"/>
@@ -238,6 +247,7 @@
                         <outlet property="movesLabel" destination="Cqv-aF-aQU" id="YUi-Dx-7TG"/>
                         <outlet property="movesLeftLabel" destination="kR3-Ig-OhP" id="voy-Nw-r6q"/>
                         <outlet property="nextChallengeButton" destination="I8c-3Y-Wds" id="V8I-os-beZ"/>
+                        <outlet property="progressLabel" destination="49a-Bm-Jzm" id="372-tz-8Ob"/>
                         <outlet property="toolControl" destination="99O-ka-blD" id="G98-fw-tO9"/>
                         <outlet property="toolInstruction" destination="bks-Fo-Osy" id="oEd-GC-qdW"/>
                     </connections>
